# fdf

./: Makefile
fdf/: CMakeLists.txt  a.out  fdf.h  main.c  readmap.c
fdf/a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: fdf.h
libft/ft_str/: Makefile  ft_atoi.c  ft_countletters.c  ft_countwds.c  ft_strsplit.c  libft.h
src/: check.c  draw.c  extra_functions.c  main.c  read_file.c
